--- a/public/home.html
+++ b/public/home.html
@@ -33,7 +33,7 @@
 				<ul class="right hide-on-med-and-down" id="head-nav-links">
 					<li><a href="/survey">Survey</a></li>
 					<li><a href="/api/friends">API Friends List</a></li>
-					<li><a href="https://github.com/angrbrd/friend-finder">GitHub Repo</a></li>
+					<li><a href="https://github.com/Dheepa1234/friend-finder-app">GitHub Repo</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -64,7 +64,7 @@
 			<div class="row">
 				<div class="col l6 s12">
 					<h5 class="white-text">Friend Finder App</h5>
-					<p class="grey-text text-lighten-4">Thank you for taking the brief survey. Your responses will be used for training purposes only :-].</p>
+					<p class="grey-text text-lighten-4">Thank you for taking this survey. Your responses are protected.</p>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Links</h5>
@@ -77,8 +77,8 @@
 		</div>
 		<div class="footer-copyright">
 			<div class="container">
-				© 2017 angrbrd entertainment
-				<a class="grey-text text-lighten-4 right" href="https://github.com/angrbrd">Reference Work</a>
+				© 2018 Dheepa Sivakumaran
+				<a class="grey-text text-lighten-4 right" href="https://github.com/Dheepa1234">Reference Work</a>
 			</div>
 		</div>
 	</footer>
