--- a/public/home.html
+++ b/public/home.html
@@ -47,7 +47,7 @@
 						<h1>Friend Finder</h1>
 						<div class="divider"></div>
 						<h2>Answer a few basic questions.</h2>
-						<h2>Find the friend with the greatest compatibility!</h2>
+						<h2>Find the friend with the greatest compatibility! "Strangers are just friends waiting to happen." </h2>
 						<a href="/survey">
 							<button class="btn waves-effect waves-light" type="submit" name="action">Go to Survey
 								<i class="material-icons right">send</i>
