--- a/public/home.html
+++ b/public/home.html
@@ -70,7 +70,7 @@
 					<h5 class="white-text">Links</h5>
 					<ul>
 						<li><a class="grey-text text-lighten-3" href="/api/friends">API Friends List</a></li>
-						<li><a class="grey-text text-lighten-3" href="https://github.com/angrbrd/friend-finder">GitHub Repo</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://github.com/Dheepa1234/friend-finder-app">GitHub Repo</a></li>
 					</ul>
 				</div>
 			</div>
@@ -78,7 +78,7 @@
 		<div class="footer-copyright">
 			<div class="container">
 				© 2018 Dheepa Sivakumaran
-				<a class="grey-text text-lighten-4 right" href="https://github.com/Dheepa1234">Reference Work</a>
+				<a class="grey-text text-lighten-4 right" href="https://github.com/Dheepa1234/friend-finder-app">Reference Work</a>
 			</div>
 		</div>
 	</footer>
