Please add changes

--- a/public/survey.html
+++ b/public/survey.html
@@ -223,7 +223,7 @@
 		<div class="footer-copyright">
 			<div class="container">
 				© 2018 Dheepa Sivakumaran
-				<a class="grey-text text-lighten-4 right" href="https://github.com/Dheepa1234">Reference Work</a>
+				<a class="grey-text text-lighten-4 right" href="https://github.com/Dheepa1234/friend-finder-app">Reference Work</a>
 			</div>
 		</div>
 	</footer>
