--- a/public/survey.html
+++ b/public/survey.html
@@ -194,7 +194,7 @@
 
 						<!-- Survey Submit Button -->
 						<div>
-							<button class="btn waves-effect waves-light" type="submit" name="action" id="submitButton">Submit Responses
+							<button class="btn waves-effect waves-light" id="submitButton">Submit Responses
 								<i class="material-icons right">send</i>
 							</button>
 						</div>
@@ -255,6 +255,7 @@
 		});
 		// Activate submit button
 		$('#submitButton').on('click', function(event) {
+			console.log('click')
 			event.preventDefault();
 			// Gather user inputs
 			var userInput = {
@@ -279,8 +280,8 @@
       		.done(function(data) {
       			// console.log('response = ' + JSON.stringify(data));
       			// Set the name and image values of friend match
-      			$('#userMatch').html(data.matchName);
-		    	$("#userMatchImage").attr("src", data.matchImage);
+      			$('#userMatch').html(data.name);
+		    	$("#userMatchImage").attr("src", data.photo);
 		    	// Pop open the modal dialog
       			$('#modal1').modal('open');
       		});
